--- a/app/views/partials/adminViewEvent.html
+++ b/app/views/partials/adminViewEvent.html
@@ -1,13 +1,46 @@
 <div class="row">
     <div class="col-lg-12">
         <div class="container-fluid">
-        {{eventData[0]['event_detail_id']}}
+        <!--{{eventData[0]['event_detail_id']}}-->
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class ='viewEvents'>
+                        <div class='row eventTitle'>EVENT NAME </div>
+                        <div class='row eventDetails'>
+                            <div class='col-lg-4'>
+                                ADDRESS<br>
+                                PRICE : 400/-
+                            </div>
+                            <div class='col-lg-4'></div>
+                            <div class='col-lg-4' id='options'>
+                                <span class="glyphicon glyphicon-edit"></span>
+                                <span class="glyphicon glyphicon-trash"></span>
+                                <!--<button class='btn btn-primary' id='edit'>Edit</button>-->
+                            </div>
+                        </div>
+                    </div>
 
+                </div>
+
+                <!--<div class="col-lg-6">-->
+                    <!--<div class ="viewEvents">-->
+                        <!--<div class="row eventTitle">-->
+                            <!--EVENT NAME-->
+                        <!--</div>-->
+                        <!--<div class="row eventDetails">-->
+                            <!--<div class="col-lg-4">-->
+                                <!--ADDRESS <br>-->
+                                <!--PRICE : 400/--->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            </div>
 
         </div>
     </div>
 </div>
-<section id="map" >
-    <div ui-map="myMap" ui-options="mapOptions" class="map-canvas"></div>
-</section>
-<div style="height: 200px;width: 200px;position: absolute;"><img src="{{imageUrl}}" alt=""/></div>
+<!--<section id="map" >-->
+    <!--<div ui-map="myMap" ui-options="mapOptions" class="map-canvas"></div>-->
+<!--</section>-->
+<!--<div style="height: 200px;width: 200px;position: absolute;"><img src="{{imageUrl}}" alt=""/></div>-->
