--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -211,7 +211,7 @@ input[type="radio"] {
 }
 
 .eventDetails {
-    padding-top: 19%;
+    padding-top: 80px;
     font-size: 17px;
     padding-left: 4%;
 }
