added the image url insertion into database feature

--- a/app/views/partials/adminViewEvent.html
+++ b/app/views/partials/adminViewEvent.html
@@ -14,8 +14,9 @@
                             {{formData.event_overview[$index]}}<br><hr>
                             {{formData.event_hashtags[$index]}}<br><hr>
                             {{formData.event_area[$index]}}<br><hr>
-                            {{formData.image[$index]}}<br><hr>
-                            {{formData.schedule[$index]}}
+                            {{formData.datetime[$index]}}<br><hr>
+                            {{formData.no_of_days[$index]}}
+
 
                         </div>
                         <div class='row eventDetails'>
