--- a/app/views/partials/adminViewEvent.html
+++ b/app/views/partials/adminViewEvent.html
@@ -33,6 +33,27 @@
                         </div>
                     </div>
 
+                    <div ng-controller="ModalDemoCtrl">
+                        <script type="text/ng-template" id="myModalContent.html">
+                            <div class="modal-header">
+                                <h3 class="modal-title">I'm a modal!</h3>
+                            </div>
+                            <div class="modal-body">
+                                <div class="form-group">
+                                    <label for="event_overview" class="col-md-4 control-label">Event Overview:</label>
+                                    <div class="col-md-8">
+                                        <textarea style="resize: none;" class="form-control" rows="6" id="event_overview" ng-model="formData.event_overview[id]"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button class="btn btn-primary" ng-click="ok()">OK</button>
+                                <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+                            </div>
+                        </script>
+                        <button class="btn btn-default" ng-click="open('lg',formData, $index)">Large modal</button>
+                    </div>
+
                 </div>
             </div>
 
