--- a/app/views/partials/adminViewEvent.html
+++ b/app/views/partials/adminViewEvent.html
@@ -39,12 +39,224 @@
                                 <h3 class="modal-title">I'm a modal!</h3>
                             </div>
                             <div class="modal-body">
-                                <div class="form-group">
-                                    <label for="event_overview" class="col-md-4 control-label">Event Overview:</label>
-                                    <div class="col-md-8">
-                                        <textarea style="resize: none;" class="form-control" rows="6" id="event_overview" ng-model="formData.event_overview[id]"></textarea>
+                            <form class="form-horizontal" role="form" enctype="multipart/form-data" novalidate name="eventForm">
+                            <h2 class="event-heading">Event Details</h2>
+                            <hr/>
+
+                            <div class="row well">
+                                <div class="col-lg-6">
+                                    <div class="row">
+                                        <div class="form-group">
+                                            <label for="event_name" class="col-md-4 control-label">Event Name:</label>
+                                            <div class="col-md-8">
+                                                <input type="text" name="event_name" ng-minlength="4" ng-maxlength="8" class="form-control" id="event_name" placeholder="Event Name" ng-model="formData.event_name[id]" required>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="form-group">
+                                            <label for="event_category" class="col-md-4 control-label">Event Category:</label>
+                                            <div class="col-md-8">
+                                                <select class="form-control" id="event_category" ng-options="var for var in event_categories track by var" name="event_category" ng-model="selectedCategory">
+
+                                                </select>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="form-group">
+                                            <label for="event_cost" class="col-md-4 control-label">Cost:</label>
+                                            <div class="col-md-8">
+                                                <input type="text" class="form-control" id="event_cost" placeholder="Minimum Cost" ng-model="formData.event_cost[id]">
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+                                <div class="col-lg-6">
+                                    <div class="row">
+                                        <div class="form-group">
+                                            <label for="event_overview" class="col-md-4 control-label">Event Overview:</label>
+                                            <div class="col-md-8">
+                                                <textarea style="resize: none;" class="form-control" rows="6" id="event_overview" ng-model="formData.event_overview[id]"></textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row well">
+                                <div class="col-lg-12" style="margin-left: 3%;">
+                                    <div class="col-lg-1"><span class="hashtag-heading" style="font-size: 15px;font-weight: 800;">Hashtag:</span></div>
+                                    <div class="col-lg-3" style="margin-left: 4%">
+                                        <div class="input-group">
+                                            <span class="input-group-addon">#</span>
+                                            <input type="text" class="form-control" id="hash1" ng-model="formData.hash1">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="input-group">
+                                            <span class="input-group-addon">#</span>
+                                            <input type="text" class="form-control" id="hash2" ng-model="formData.hash2">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3">
+                                        <div class="input-group">
+                                            <span class="input-group-addon">#</span>
+                                            <input type="text" class="form-control" id="hash3" ng-model="formData.hash3">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!--Venue Form Starts here-->
+                            <h2 class="venue-heading">Venue Details</h2>
+                            <hr/>
+
+                            <div class="row well">
+                                <div class="col-lg-6">
+                                    <div class="row">
+                                        <div class="form-group">
+                                            <label for="venue_name" class="col-md-4 control-label">Venue Name:</label>
+                                            <div class="col-md-8">
+                                                <input type="text" name="venue_name" class="form-control" id="venue_name" placeholder="Venue Name" ng-model="formData.venue_name[id]">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="form-group">
+                                            <label for="event_area" class="col-md-4 control-label">Area:</label>
+                                            <div class="col-md-8">
+                                                <select class="form-control" id="event_area" ng-options="var for var in event_areas track by var" name="event_area" ng-model="selectedArea">
+
+                                                </select>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="row">
+                                        <div class="form-group">
+                                            <label for="event_location" class="col-md-4 control-label">Address:</label>
+                                            <div class="col-md-8">
+                                                <textarea style="resize: none;" class="form-control" rows="4" id="event_location" ng-model="formData.event_location[id]"></textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <h2 class="schedule_heading">Event Schedule</h2>
+                            <hr/>
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="form-group">
+                                        <label for="repeat_event" class="col-md-6 control-label">Do you want to repeat the event (Weekly/Monthly) ?</label>
+                                        <div class="col-md-4">
+                                            <input type="checkbox" name="repeat_event" id="repeat_event" ng-model="formData.repeatEventCheckbox">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row well" ng-show="formData.repeatEventCheckbox">
+                                <div class="col-lg-12 form-group">
+                                    <div class="col-lg-2"></div>
+                                    <div class="col-lg-5">
+                                        <div class="row">
+                                            <div class="col-lg-5">
+                                                <div class="radio">
+                                                    <label>
+                                                        <input type="radio" name="optionsRadios" id="optionsRadios1" value="weekly" ng-model="formData.repeatType" checked>
+                                                        Weekly {{week_checkbox}}
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-7">
+                                                <select class="form-control" id="no_of_weeks" name="no_of_weeks" ng-model="formData.no_of_weeks" ng-show="formData.repeatType == 'weekly'">
+                                                    <option value="1">1</option>
+                                                    <option value="2">2</option>
+                                                    <option value="3">3</option>
+                                                    <option value="4">4</option>
+                                                    <option value="5">5</option>
+                                                    <option value="6">6</option>
+                                                    <option value="7">7</option>
+                                                    <option value="8">8</option>
+                                                </select>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-5">
+                                        <div class="row">
+                                            <div class="col-lg-5">
+                                                <div class="radio">
+                                                    <label>
+                                                        <input type="radio" name="optionsRadios" id="optionsRadios2" value="monthly" ng-model="formData.repeatType">
+                                                        Monthly
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-7">
+                                                <select class="form-control" id="no_of_months" name="no_of_months" ng-model="formData.no_of_months" ng-show="formData.repeatType == 'monthly'">
+                                                    <option value="1">1</option>
+                                                    <option value="2">2</option>
+                                                    <option value="3">3</option>
+                                                </select>
+
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="form-group">
+                                    <div class="col-lg-2"></div>
+                                    <label for="no_of_days" class="col-md-2 control-label">Select no of Days: </label>
+                                    <div class="col-md-4">
+                                        <select class="form-control" id="no_of_days" name="no_of_days" ng-model="day" ng-change="change(day)">
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
+                                            <option value="7">7</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row" mydatepicker day="day">
+
+                            </div>
+                            <div id="datepicker-placeholder" class="well"></div>
+
+                            <h2 class="image-heading">Image Upload</h2>
+                            <hr/>
+
+                            <div class="row well">
+
+                                <div class="col-lg-4">
+                                    <label for="image1" class="col-md-4 control-label">Image One: </label>
+                                    <button class="btn btn-success" ng-file-select ng-model="formData.images[0]" ng-multiple="false" accept="image/*" id="image1" >Attach Image One</button>
+                                    <!--<progressbar max="100" value="progress_arr[0]"><span style="color:black; white-space:nowrap;">{{progress_arr[0]}}</span></progressbar>-->
+                                </div>
+                                <div class="col-lg-4">
+                                    <label for="image2" class="col-md-4 control-label">Image Two: </label>
+                                    <button class="btn btn-success" ng-file-select ng-model="formData.images[1]" ng-multiple="false" accept="image/*" id="image2" >Attach Image Two</button>
+
+                                </div>
+                                <div class="col-lg-4">
+                                    <label for="image3" class="col-md-4 control-label">Image Three: </label>
+                                    <button class="btn btn-success" ng-file-select ng-model="formData.images[2]" ng-multiple="false" accept="image/*" id="image3" >Attach Image Three</button>
+
+                                </div>
+                            </div>
+
+                            </form>
+
                             </div>
                             <div class="modal-footer">
                                 <button class="btn btn-primary" ng-click="ok()">OK</button>
