--- a/app/views/partials/adminViewEvent.html
+++ b/app/views/partials/adminViewEvent.html
@@ -91,19 +91,19 @@
                                     <div class="col-lg-3" style="margin-left: 4%">
                                         <div class="input-group">
                                             <span class="input-group-addon">#</span>
-                                            <input type="text" class="form-control" id="hash1" ng-model="formData.hash1">
+                                            <input type="text" class="form-control" id="hash1" ng-model="formData.event_hashtags[id][0]">
                                         </div>
                                     </div>
                                     <div class="col-lg-3">
                                         <div class="input-group">
                                             <span class="input-group-addon">#</span>
-                                            <input type="text" class="form-control" id="hash2" ng-model="formData.hash2">
+                                            <input type="text" class="form-control" id="hash2" ng-model="formData.event_hashtags[id][1]">
                                         </div>
                                     </div>
                                     <div class="col-lg-3">
                                         <div class="input-group">
                                             <span class="input-group-addon">#</span>
-                                            <input type="text" class="form-control" id="hash3" ng-model="formData.hash3">
+                                            <input type="text" class="form-control" id="hash3" ng-model="formData.event_hashtags[id][2]">
                                         </div>
                                     </div>
                                 </div>
