--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -222,3 +222,8 @@ input[type="radio"] {
 .modal_date_time {
     margin-bottom: 15px;
 }
+
+.edit_image {
+    padding-left: 25%;
+    padding-bottom: 5px;
+}
