--- a/app/views/partials/adminAddEvent.html
+++ b/app/views/partials/adminAddEvent.html
@@ -205,18 +205,19 @@
 
                         <div class="col-lg-4">
                             <label for="image1" class="col-md-4 control-label">Image One: </label>
-                            <button class="btn btn-success" ng-file-select ng-model="formData.images[0]" ng-multiple="false" accept="image/*" id="image1" >Attach Image One</button>
+                            <button class="btn btn-success" ng-file-change="fileChanged(formData.images[0], 0)" ng-file-select ng-model="formData.images[0]" ng-multiple="false" accept="image/*" id="image1" >Attach Image One</button>
+                            <div class="file_name_preview">{{selectedFile[0]}}</div>
                             <!--<progressbar max="100" value="progress_arr[0]"><span style="color:black; white-space:nowrap;">{{progress_arr[0]}}</span></progressbar>-->
                         </div>
                         <div class="col-lg-4">
                             <label for="image2" class="col-md-4 control-label">Image Two: </label>
-                            <button class="btn btn-success" ng-file-select ng-model="formData.images[1]" ng-multiple="false" accept="image/*" id="image2" >Attach Image Two</button>
-
+                            <button class="btn btn-success" ng-file-change="fileChanged(formData.images[1], 1)" ng-file-select ng-model="formData.images[1]" ng-multiple="false" accept="image/*" id="image2" >Attach Image Two</button>
+                            <div class="file_name_preview">{{selectedFile[1]}}</div>
                         </div>
                         <div class="col-lg-4">
                             <label for="image3" class="col-md-4 control-label">Image Three: </label>
-                            <button class="btn btn-success" ng-file-select ng-model="formData.images[2]" ng-multiple="false" accept="image/*" id="image3" >Attach Image Three</button>
-
+                            <button class="btn btn-success" ng-file-change="fileChanged(formData.images[2], 2)" ng-file-select ng-model="formData.images[2]" ng-multiple="false" accept="image/*" id="image3" >Attach Image Three</button>
+                            <div class="file_name_preview">{{selectedFile[2]}}</div>
                         </div>
                 </div>
                 <div class="row">
